@@ -1,78 +1,124 @@
 package io.kestra.executor.handler;
 
-import java.util.Collections;
 import java.util.List;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 
 import io.kestra.core.executor.command.Create;
-import io.kestra.core.executor.command.ExecutionCommand;
-import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.executions.Execution;
-import io.kestra.core.models.flows.GenericFlow;
-import io.kestra.core.models.triggers.multipleflows.MultipleConditionStateStore;
-import io.kestra.core.queues.DispatchQueueInterface;
-import io.kestra.core.queues.QueueException;
-import io.kestra.core.repositories.ExecutionRepositoryInterface;
-import io.kestra.core.repositories.FlowRepositoryInterface;
+import io.kestra.core.models.flows.State;
 import io.kestra.core.runners.MultipleConditionEvent;
-import io.kestra.executor.FlowTriggerService;
-
-import jakarta.inject.Inject;
+import io.kestra.executor.testkit.ExecutorTestHarness;
+import io.kestra.executor.testkit.Flows;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-@KestraTest
 class MultipleConditionEventMessageHandlerTest {
-    @Inject
-    private MultipleConditionEventMessageHandler multipleConditionEventMessageHandler;
+    private ExecutorTestHarness harness;
 
-    @Inject
-    private ExecutionRepositoryInterface executionRepository;
-
-    @Inject
-    private FlowRepositoryInterface flowRepository;
-
-    @Test
-    void shouldHandleAMessage() {
-        var flow = Fixtures.flow();
-        flowRepository.create(GenericFlow.of(flow));
-        var execution = Execution.newExecution(flow, Collections.emptyList());
-        executionRepository.save(execution);
-        var multipleConditionEvent = new MultipleConditionEvent(flow, execution);
-
-        multipleConditionEventMessageHandler.handle(multipleConditionEvent);
+    @BeforeEach
+    void setUp() {
+        harness = ExecutorTestHarness.create();
     }
 
-    @SuppressWarnings("unchecked")
     @Test
-    void shouldCarryExecutionDepthAcrossToTheCreateCommand() throws QueueException {
-        // Given a trigger evaluation that already carries a non-zero execution depth — this is the
-        // hop MultipleConditionEventMessageHandler must not drop when it rebuilds the Execution
-        // returned by FlowTriggerService into a Create command (see Flow.evaluate/FlowTriggerService,
-        // which is where the depth is actually computed; the mock here just stands in for that)
+    void shouldEmitExecutionCommandWhenFlowTriggerComputesAnExecution() {
+        // Given
         var flow = Fixtures.flow();
-        var upstream = Execution.newExecution(flow, Collections.emptyList());
-        var triggered = Execution.newExecution(flow, Collections.emptyList());
-        triggered = triggered.withMetadata(triggered.getMetadata().withExecutionDepth(4));
+        harness.registerFlow(Flows.of(flow));
+        var execution = Execution.newExecution(flow, List.of());
+        harness.executionStateStore().save(execution);
 
-        FlowTriggerService flowTriggerService = mock(FlowTriggerService.class);
-        when(flowTriggerService.computeExecutionsFromFlowTriggerDependsOn(any(), any(), any())).thenReturn(List.of(triggered));
-        MultipleConditionStateStore multipleConditionStateStore = mock(MultipleConditionStateStore.class);
-        DispatchQueueInterface<ExecutionCommand> executionCommandQueue = mock(DispatchQueueInterface.class);
-        var handler = new MultipleConditionEventMessageHandler(flowTriggerService, multipleConditionStateStore, executionCommandQueue);
+        var triggeredFlow = Fixtures.flow();
+        var triggered = Execution.newExecution(triggeredFlow, List.of());
+        when(harness.flowTriggerService().computeExecutionsFromFlowTriggerDependsOn(execution, flow, harness.multipleConditionStateStore()))
+            .thenReturn(List.of(triggered));
 
         // When
-        handler.handle(new MultipleConditionEvent(flow, upstream));
+        harness.multipleConditionEventMessageHandler().handle(new MultipleConditionEvent(flow, execution));
+
+        // Then
+        assertThat(harness.executionCommandQueue().emitted()).hasSize(1);
+        var command = harness.executionCommandQueue().emitted().getFirst();
+        assertThat(command).isInstanceOf(Create.class);
+        var create = (Create) command;
+        assertThat(create.tenantId()).isEqualTo(triggered.getTenantId());
+        assertThat(create.namespace()).isEqualTo(triggered.getNamespace());
+        assertThat(create.flowId()).isEqualTo(triggered.getFlowId());
+        assertThat(create.executionId()).isEqualTo(triggered.getId());
+        assertThat(create.flowRevision()).isEqualTo(triggered.getFlowRevision());
+        assertThat(create.kind()).isEqualTo(triggered.getKind());
+        assertThat(create.trigger()).isEqualTo(triggered.getTrigger());
+        assertThat(create.labels()).isEqualTo(triggered.getLabels());
+        assertThat(create.inputs()).isEqualTo(triggered.getInputs());
+        // the triggered execution is not terminated, so its state is not carried over
+        assertThat(create.stateType()).isNull();
+    }
+
+    @Test
+    void shouldPreserveTerminalStateWhenComputedExecutionIsTerminated() {
+        // Given
+        var flow = Fixtures.flow();
+        harness.registerFlow(Flows.of(flow));
+        var execution = Execution.newExecution(flow, List.of());
+        harness.executionStateStore().save(execution);
+
+        var triggeredFlow = Fixtures.flow();
+        var triggered = Execution.newExecution(triggeredFlow, List.of()).withState(State.Type.FAILED);
+        when(harness.flowTriggerService().computeExecutionsFromFlowTriggerDependsOn(execution, flow, harness.multipleConditionStateStore()))
+            .thenReturn(List.of(triggered));
+
+        // When
+        harness.multipleConditionEventMessageHandler().handle(new MultipleConditionEvent(flow, execution));
+
+        // Then
+        assertThat(harness.executionCommandQueue().emitted()).hasSize(1);
+        var create = (Create) harness.executionCommandQueue().emitted().getFirst();
+        assertThat(create.executionId()).isEqualTo(triggered.getId());
+        assertThat(create.stateType()).isEqualTo(State.Type.FAILED);
+    }
+
+    @Test
+    void shouldCarryExecutionDepthAcrossToTheCreateCommand() {
+        // Given a trigger evaluation that already carries a non-zero execution depth — this is the
+        // hop MultipleConditionEventMessageHandler must not drop when it rebuilds the Execution
+        // returned by FlowTriggerService into a Create command
+        var flow = Fixtures.flow();
+        harness.registerFlow(Flows.of(flow));
+        var upstream = Execution.newExecution(flow, List.of());
+        harness.executionStateStore().save(upstream);
+        var triggered = Execution.newExecution(flow, List.of());
+        triggered = triggered.withMetadata(triggered.getMetadata().withExecutionDepth(4));
+
+        when(harness.flowTriggerService().computeExecutionsFromFlowTriggerDependsOn(upstream, flow, harness.multipleConditionStateStore()))
+            .thenReturn(List.of(triggered));
+
+        // When
+        harness.multipleConditionEventMessageHandler().handle(new MultipleConditionEvent(flow, upstream));
 
         // Then the Create command carries the depth onward, rather than resetting it to a fresh root
-        ArgumentCaptor<ExecutionCommand> captor = ArgumentCaptor.forClass(ExecutionCommand.class);
-        verify(executionCommandQueue).emit(captor.capture());
-        assertThat(((Create) captor.getValue()).executionDepth()).isEqualTo(4);
+        assertThat(harness.executionCommandQueue().emitted()).hasSize(1);
+        var create = (Create) harness.executionCommandQueue().emitted().getFirst();
+        assertThat(create.executionDepth()).isEqualTo(4);
+    }
+
+    @Test
+    void shouldEmitNothingWhenNoExecutionIsComputed() {
+        // Given
+        var flow = Fixtures.flow();
+        harness.registerFlow(Flows.of(flow));
+        var execution = Execution.newExecution(flow, List.of());
+        harness.executionStateStore().save(execution);
+
+        when(harness.flowTriggerService().computeExecutionsFromFlowTriggerDependsOn(execution, flow, harness.multipleConditionStateStore()))
+            .thenReturn(List.of());
+
+        // When
+        harness.multipleConditionEventMessageHandler().handle(new MultipleConditionEvent(flow, execution));
+
+        // Then
+        assertThat(harness.executionCommandQueue().emitted()).isEmpty();
     }
 }
